# edi-mcp-rag-project

./: Readme.md  api_key  multifile_chatbot.py  poetry.toml  pyproject.toml  requirements.txt
src/parsers/: base_parser.py  excel_parser.py  models.py  pdf_parser.py  test_excel_pdf.py  text_parser.py  universal_parser.py  word_parser.py
