[tool.poetry]
name = "edi-mcp-rag-agent"
version = "0.1.0"
description = "Intelligent EDI processing system using MCP, RAG, and Agentic AI"


[tool.poetry.dependencies]
python = "^3.10"

# Core MCP
mcp = ">=0.9.0"

# RAG (Retrieval Augmented Generation)
chromadb = ">=0.4.22"
sentence-transformers = ">=2.2.0"

# AI/LLM Integration
openai = {version = ">=1.0.0", optional = true}

# Document Parsing & Extraction
pypdf = ">=3.17.0"
pdfplumber = ">=0.10.0"
beautifulsoup4 = ">=4.12.0"
lxml = ">=4.9.0"
html2text = ">=2020.1.16"
langchain-community = ">=0.0.20"
unstructured = ">=0.10.0"
python-docx = ">=1.0.0"
openpyxl = ">=3.1.0"

# Utilities
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
requests = ">=2.31.0"
aiohttp = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"

# Code Quality
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
isort = ">=5.12.0"

# Documentation
mkdocs = {version = ">=1.5.0", optional = true}
mkdocs-material = {version = ">=9.0.0", optional = true}

[tool.poetry.extras]
openai = ["openai"]
docs = ["mkdocs", "mkdocs-material"]
all = ["openai", "mkdocs", "mkdocs-material"]

[tool.poetry.scripts]
edi-mcp-server = "src.mcp_server.hello_server:main"
edi-test-client = "src.mcp_server.test_hello_client:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]